@@ -61,13 +61,14 @@ function load_user_files()
 			add_to_chat(123,'GearSwap: file_unload() is not a function')
 		end
 	end
-	user_env = nil
 	
-	for i,v in pairs(registered_user_events) do
-		windower.unregister_event(i)
+	if registered_user_events then
+		for i,v in pairs(registered_user_events) do
+			windower.unregister_event(i)
+		end
 	end
 	
-	unrequire_user()
+	user_env = nil
 	
 	if not file_exists(lua_base_path..'data/'..player['name']..'_'..player.main_job..'.lua') then
 		user_env = nil
@@ -86,7 +87,7 @@ function load_user_files()
 		tostring = tostring, tonumber = tonumber, pairs = pairs,
 		ipairs = ipairs, write=write, add_to_chat=add_to_chat,
 		send_command=send_cmd_user,windower=user_windower,
-		require=require_user,next=next,
+		include=include_user,next=next,lua_base_path=lua_base_path,
 		
 		-- Player environment things
 		buffactive=buffactive,
@@ -125,7 +126,6 @@ function load_user_files()
 	elseif user_env.get_sets then
 		add_to_chat(123,'GearSwap: get_sets() is defined but is not a function.')
 	end
-	
 end
 
 
