@@ -1,4 +1,6 @@
 -------------------------------------------------
+Gearswap 0.704 - Changed require() to include() and reworked its back end. Confirmed that register_event() works for users now and are successfully deleted.
+-------------------------------------------------
 Gearswap 0.703 - Added an export command and the appropriate documentation.
 -------------------------------------------------
 Gearswap 0.702 - Made keys to player data tables all case insensitive. Fixed the user windower structure. Set it so it should reset midaction if the spelltarget dies while casting.
